kubernetes/platform/gateway/overlays/management-prd/gateway-patch.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: kube-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  addresses:
    - type: IPAddress
      value: "10.0.2.50"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-harbor
      port: 443
      protocol: HTTPS
      hostname: "harbor.mgmt.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: harbor-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "harbor"
    - name: https-fluxcd
      port: 443
      protocol: HTTPS
      hostname: "fluxcd.mgmt.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: fluxcd-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "flux-system"
    - name: https-vault
      port: 443
      protocol: HTTPS
      hostname: "vault.mgmt.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "vault"
    - name: https-hubble
      port: 443
      protocol: HTTPS
      hostname: "hubble.mgmt.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: hubble-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "kube-system"
    - name: https-goldilocks
      port: 443
      protocol: HTTPS
      hostname: "goldilocks.mgmt.yuriykovalchuk.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - name: goldilocks-gw-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: "vpa"
